# ida-chat-plugin

./: .gitignore  CHANGELOG.md  README.md  ida-plugin.json  ida_chat_bootstrap.py  ida_chat_cli.py  ida_chat_cli_runtime_setup.py  ida_chat_core.py  ida_chat_export.py  ida_chat_history.py  ida_chat_markdown.py  ida_chat_plugin.py  ida_chat_runtime_setup.py  ida_chat_support.py  ida_chat_theme.py  pyproject.toml  pyrightconfig.json  release-manifest.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
preview/: build_previews.py  exported-chat.html  index.html  main-window.html  settings.html
project/: MANUAL_TESTING.md  PROMPT.md  USAGE.md
tests/: test_bootstrap.py  test_cli.py  test_core.py  test_history.py  test_markdown.py  test_packaging.py  test_release_manifest.py  test_support.py  test_theme.py
typings/: ida_idaapi.pyi  ida_kernwin.pyi  ida_lines.pyi
