[project]
name = "ida-chat"
version = "1.0.1"
description = "CLI chat interface for IDA Pro using Claude Agent SDK"
requires-python = ">=3.10"
license = "MIT"
keywords = ["ida", "ida-pro", "reverse-engineering", "disassembler", "binary-analysis", "ai", "claude", "llm"]
authors = [
    { name = "Hex-Rays SA", email = "support@hex-rays.com" }
]
dependencies = [
    "claude-agent-sdk",
    "ida-domain",
    "ida-settings>=3.3.0",
    "beautifulsoup4>=4.12.3",
    "linkify-it-py>=2.0.3",
    "markdown-it-py>=3.0.0",
    "Pygments>=2.18.0",
    "rich",
]

[project.urls]
Homepage = "https://hex-rays.com/"
Repository = "https://github.com/tanu360/ida-chat-plugin"
Issues = "https://github.com/tanu360/ida-chat-plugin/issues"

[project.scripts]
ida-chat = "ida_chat_cli:main"
idc = "ida_chat_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["assets", "ida-plugin.json", "ida_chat_bootstrap.py", "ida_chat_cli.py", "ida_chat_cli_runtime_setup.py", "ida_chat_core.py", "ida_chat_export.py", "ida_chat_history.py", "ida_chat_markdown.py", "ida_chat_plugin.py", "ida_chat_runtime_setup.py", "ida_chat_support.py", "ida_chat_theme.py", "project", "requirements.txt"]

[project.optional-dependencies]
dev = [
    "PySide6>=6.8.0",
    "pytest>=8.3.0",
    "taskipy>=1.14.1",
    "python-semantic-release>=10.3.1",
]

[tool.taskipy.tasks]
current-version = "semantic-release version --print-last-released"
release-major = "semantic-release version --major"
release-minor = "semantic-release version --minor"
release-patch = "semantic-release version --patch"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["ida-plugin.json:version"]
build_command = "uv lock --upgrade-package ida-chat && uv build"
dist_path = "dist/"
major_on_zero = false
allow_zero_version = true
changelog_file = "CHANGELOG.md"
